# NewChat

./: CMakeLists.txt  README.md  main.cpp
ChatClient/: CMakeLists.txt  main.cpp  resources.qrc
ChatClient/CustomWidget/: CMakeLists.txt
ChatClient/CustomWidget/headers/: contactlist.h  rotatingstackedwidget.h
ChatClient/CustomWidget/sources/: basewidget.cpp  contactheaderwidget.cpp
ChatClient/DataBase/headers/: databasemgr.h
ChatClient/NetWork/sources/: clientsocket.cpp
ChatClient/NewChat/: CMakeLists.txt
ChatClient/Utility/: CMakeLists.txt
ChatClient/Utility/headers/: iteminfo.h  usercell.h
ChatServer/: CMakeLists.txt  main.cpp
ChatServer/CustomWidget/: CMakeLists.txt
ChatServer/CustomWidget/headers/: customwidget.h
ChatServer/CustomWidget/sources/: customwidget.cpp
ChatServer/DataBase/headers/: databasemgr.h
ChatServer/DataBase/sources/: databasemgr.cpp
ChatServer/NetWork/: CMakeLists.txt
ChatServer/NetWork/headers/: clientsocket.h  tcpserver.h
ChatServer/NetWork/sources/: clientsocket.cpp  tcpserver.cpp
ChatServer/NewChat/: CMakeLists.txt
ChatServer/NewChat/headers/: mainwindow.h
ChatServer/NewChat/sources/: mainwindow.cpp
ChatServer/Utility/: CMakeLists.txt
ChatServer/Utility/headers/: global.h  myapplication.h  unit.h
ChatServer/Utility/sources/: myapplication.cpp
CustomWidget/: basewidget.cpp  basewidget.h  contactlist.cpp
CustomWidget/headers/: animationstackedwidget.h  contactheaderwidget.h  contactlistitem.h
CustomWidget/sources/: animationstackedwidget.cpp  contactlistitem.cpp  rotatingstackedwidget.cpp
DataBase/: CMakeLists.txt  databasemgr.h
DataBase/sources/: databasemgr.cpp
NetWork/: CMakeLists.txt  clientsocket.cpp
NetWork/headers/: clientsocket.h
NewChat/headers/: chatwindow.h  logindialog.h  mainwindow.h
NewChat/sources/: chatwindow.cpp  mainwindow.cpp
Utility/: iteminfo.cpp  unit.h  usercell.cpp
Utility/headers/: global.h  myapp.h
Utility/sources/: myapp.cpp
WeChat/: logindialog.cpp  logindialog.h  mainwindow.cpp  mainwindow.h
WeChat/sources/: logindialog.cpp
